fixing colors for dark mode

--- a/_sass/base/general.sass
+++ b/_sass/base/general.sass
@@ -79,13 +79,13 @@ figcaption
 
 blockquote
 	padding-left: 15px
-	border-left: 3px solid #eee
+	border-left: 3px solid $border-color
 
 hr
 	border: none
 	height: 1px
 	margin: 40px auto
-	background: #eee
+	background: $border-color
 	width: 100%
 
 figure.highlight
@@ -97,7 +97,7 @@ code
 	font-family: $fontMonospace
 	font-size: 12px
 	vertical-align: middle
-	background: #eee
+	background: $code-bg
 	border-radius: 2px
 
 pre > code,
