--- a/_sass/base/variables-dark.sass
+++ b/_sass/base/variables-dark.sass
@@ -9,6 +9,8 @@ $epsilon: #222
 $omega: #000
 $zeta: #fff
 $kappa: #1E2D24
+$code-bg: #333
+$border-color: #333
 
 $thin-font: 400
 
