--- a/_sass/base/variables.sass
+++ b/_sass/base/variables.sass
@@ -9,6 +9,8 @@ $epsilon: #ededed
 $omega: #fff
 $zeta: #000
 $kappa: #27f36a26
+$code-bg: #eee
+$border-color: #eee
 
 $thin-font: 400
 
